working on the library

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,59 @@
                     </form>
                 </div>
             </div>
-            <div class="library"></div>
+            <div class="library">
+                <div class="library__book library__book-jacket_first">
+                    <span class="library__book-name">Jewels of Nizam</span>
+                    <span class="library__book-author">by Geeta Devi</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_second">
+                    <span class="library__book-name">Cakes & Bakes</span>
+                    <span class="library__book-author">by Sanjeev Kapoor</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_third">
+                    <span class="library__book-name">Jamie’s Kitchen</span>
+                    <span class="library__book-author">by Jamie Oliver</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_fourth">
+                    <span class="library__book-name">Inexpensive Family Meals</span>
+                    <span class="library__book-author">by Simon Holst</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_fifth">
+                    <span class="library__book-name">Paleo Slow Cooking</span>
+                    <span class="library__book-author">by Chrissy Gower</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_sixth">
+                    <span class="library__book-name">Cook Like an Italian</span>
+                    <span class="library__book-author">by Tobie Puttock</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_seventh">
+                    <span class="library__book-name">Suneeta Vaswani</span>
+                    <span class="library__book-author">by Geeta Devi</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_eighth">
+                    <span class="library__book-name">Jamie Does</span>
+                    <span class="library__book-author">by Jamie Oliver</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_ninth">
+                    <span class="library__book-name">Jamie’s italy</span>
+                    <span class="library__book-author">by Jamie Oliver</span>
+                    <div class="library__star">asd</div>
+                </div>
+                <div class="library__book library__book-jacket_tenth ">
+                    <span class="library__book-name">Vegetables Cookbook</span>
+                    <span class="library__book-author">by Matthew Biggs</span>
+                    <div class="library__star">asd</div>
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="footer">
