--- a/app/index.html
+++ b/app/index.html
@@ -23,28 +23,27 @@
     <div class="wrapper">
         <div class="sidebar">
             <div class="sidebar__item">
-                <button name="add_book" value="add_book" class="sidebar__btn">Add a book</button>
+                <button name="add_book" value="add_book" class="sidebar__btn"> <span class="sidebar__btn__text">Add a book</span></button>
             </div>
 
             <div class="sidebar__item">
-                <ul class="main-menu">
-                    <li><a href="#" class="main-menu__link main-menu__link_reading">Now Reading</a></li>
-                    <li><a href="#" class="main-menu__link main-menu__link_browser">Browse</a></li>
-                    <li><a href="#" class="main-menu__link main-menu__link_buy">Buy Books</a></li>
-                    <li><a href="#" class="main-menu__link main-menu__link_favorite">Favourite Books</a></li>
-                    <li><a href="#" class="main-menu__link main-menu__link_wishlist">Wishlist</a></li>
-                    <li><a href="#" class="main-menu__link main-menu__link_history">History</a></li>
-                </ul>
-
+                <div class="main-menu">
+                    <a href="#" class="main-menu__link">Now Reading</a>
+                    <a href="#" class="main-menu__link">Browse</a>
+                    <a href="#" class="main-menu__link">Buy Books</a>
+                    <a href="#" class="main-menu__link">Favourite Books</a>
+                    <a href="#" class="main-menu__link">Wishlist</a>
+                    <a href="#" class="main-menu__link">History</a>
+                </div>
             </div>
 
             <div class="sidebar__item">
-                <ul class="category">
-                    <li><a href="#" class="category__link category__link_must">Must Read Titles</a></li>
-                    <li><a href="#" class="category__link category__link_best">Best Of List</a></li>
-                    <li><a href="#" class="category__link category__link_novels">Classic Novels</a></li>
-                    <li><a href="#" class="category__link category__link_non">Non Fiction</a></li>
-                </ul>
+                <div class="category">
+                    <a href="#" class="category__link">Must Read Titles</a>
+                    <a href="#" class="category__link">Best Of List</a>
+                    <a href="#" class="category__link">Classic Novels</a>
+                    <a href="#" class="category__link">Non Fiction</a>
+                </div>
             </div>
 
             <div class="sidebar__item">
@@ -79,60 +78,120 @@
                 <div class="library__book library__book-jacket_first">
                     <span class="library__book-name">Jewels of Nizam</span>
                     <span class="library__book-author">by Geeta Devi</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_second">
                     <span class="library__book-name">Cakes & Bakes</span>
                     <span class="library__book-author">by Sanjeev Kapoor</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_third">
                     <span class="library__book-name">Jamie’s Kitchen</span>
                     <span class="library__book-author">by Jamie Oliver</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_fourth">
                     <span class="library__book-name">Inexpensive Family Meals</span>
                     <span class="library__book-author">by Simon Holst</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_fifth">
                     <span class="library__book-name">Paleo Slow Cooking</span>
                     <span class="library__book-author">by Chrissy Gower</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_sixth">
                     <span class="library__book-name">Cook Like an Italian</span>
                     <span class="library__book-author">by Tobie Puttock</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_seventh">
                     <span class="library__book-name">Suneeta Vaswani</span>
                     <span class="library__book-author">by Geeta Devi</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_eighth">
                     <span class="library__book-name">Jamie Does</span>
                     <span class="library__book-author">by Jamie Oliver</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_ninth">
                     <span class="library__book-name">Jamie’s italy</span>
                     <span class="library__book-author">by Jamie Oliver</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
                 <div class="library__book library__book-jacket_tenth ">
                     <span class="library__book-name">Vegetables Cookbook</span>
                     <span class="library__book-author">by Matthew Biggs</span>
-                    <div class="library__star">asd</div>
+                    <div class="rating">
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                        <span class="rating__star fa fa-star-o"></span>
+                    </div>
                 </div>
 
             </div>
         </div>
     </div>
     <div class="footer">
-        <div class="footer__btn footer__btn_"><a href="#"></a></div>
-        <div class="footer__btn footer__btn_"><a href="#"></a></div>
+        <div class="footer-item"><a href="#" class="footer__btn"><i class="fa fa-question-circle"></i></a></div>
+        <div class="footer-item"><a href="#" class="footer__btn"><i class="fa fa-cog"></i></a></div>
     </div>
 </body>
 </html>
